--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -56,13 +56,13 @@
 
     option = {
         title: {
-            text: 'Stacked Line'
+            text: 'OP40产出'
         },
         tooltip: {
             trigger: 'axis'
         },
         legend: {
-            data: ['Email', 'Union Ads', 'Video Ads', 'Direct', 'Search Engine']
+            data: 'output'
         },
         grid: {
             left: '3%',
