--- a/src/main/resources/templates/ChanLiang.html
+++ b/src/main/resources/templates/ChanLiang.html
@@ -16,7 +16,7 @@
     <script src="../static/js/echarts.js"></script>
 </head>
 
-<body data-sidebar="light">
+<body data-sidebar="dark">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
