--- a/src/main/resources/templates/ZhuangTaiChaKan.html
+++ b/src/main/resources/templates/ZhuangTaiChaKan.html
@@ -15,7 +15,7 @@
 <!--    <script src="../static/js/echarts.js"></script>-->
 </head>
 
-<body data-sidebar="light"><!-- Begin page -->
+<body data-sidebar="dark"><!-- Begin page -->
 <div id="layout-wrapper">
 
     <!--topbar and leftbar start-->
