--- a/src/main/resources/templates/knifes-huizong.html
+++ b/src/main/resources/templates/knifes-huizong.html
@@ -15,7 +15,7 @@
 </head>
 
 
-<body data-sidebar="light" ><!-- Begin page -->
+<body data-sidebar="dark" ><!-- Begin page -->
 <div id="layout-wrapper">
 
     <!--topbar and leftbar start-->
