--- a/src/main/resources/templates/ChanPin.html
+++ b/src/main/resources/templates/ChanPin.html
@@ -15,7 +15,7 @@
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
 </head>
 
-<body data-sidebar="light">
+<body data-sidebar="dark">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
