--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body>
+<body data-sidebar="dark">
 
 <!--topbar and leftbar-->
 <div th:fragment="TopAndLeft">
@@ -28,10 +28,10 @@
                 <!-- LOGO -->
                 <div class="navbar-brand-box"><a href="index.html" class="logo logo-dark"><span class="logo-sm"><img
                         src="../static/images/logo-sm-dark.png" alt="" height="20"></span><span class="logo-lg"><img
-                        src="../static/images/logo-dark1.png" alt="" height="55"></span></a><a href="index.html"
+                        src="../static/images/logo-light2.png" alt="" height="55"></span></a><a href="index.html"
                                                                                                class="logo logo-light"><span
                         class="logo-sm"><img src="../static/images/logo-sm-light.png" alt="" height="22"></span><span
-                        class="logo-lg"><img src="../static/images/logo-light.png" alt="" height="20"></span></a></div>
+                        class="logo-lg"><img src="../static/images/logo-dark2.png" alt="" height="55"></span></a></div>
                 <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect"
                         id="vertical-menu-btn"><i class="ri-menu-2-line align-middle"></i></button>
                 <!--无用的搜索-->
