--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -17,7 +17,8 @@
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
 </head>
-<body data-sidebar="light"><!-- Begin page -->
+
+<body data-sidebar="dark"><!-- Begin page -->
 <body id="layout-wrapper">
 
     <!--topbar and leftbar start-->
