--- a/src/main/resources/templates/kanban-shebeiguochengcanshu.html
+++ b/src/main/resources/templates/kanban-shebeiguochengcanshu.html
@@ -15,7 +15,7 @@
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
     <script src="../static/js/echarts.js"></script>
 </head>
-<body data-sidebar="light">
+<body data-sidebar="dark">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -103,10 +103,6 @@
 
 
 
-
-
-
-
 <!-- JAVASCRIPT -->
 <script src="../static/libs/jquery/jquery.min.js"></script>
 <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -122,8 +118,6 @@
 <script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
 <script src="../static/js/pages/dashboard.init.js"></script>
 <script src="../static/js/app.js"></script>
-
-
 
 </body>
 
