--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -165,11 +165,11 @@
                                     <ul class="metismenu list-unstyled mm-show" id="side-menu">
                                         <li class="menu-title">菜单</li>
                                         <li class="mm-active"><a th:href="@{/main}" class="waves-effect active"><i
-                                                class="ri-dashboard-line"></i>
+                                                class="ri-home-3-fill"></i>
                                             <span class="badge badge-pill badge-success float-right">99+</span>
                                             <span>主页</span></a></li>
                                         <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i
-                                                class="ri-calendar-2-line"></i><span>设备状态看板</span></a>
+                                                class=" ri-calendar-event-fill"></i><span>设备状态看板</span></a>
 
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/instance_status}">即时状态查看</a></li>
@@ -182,7 +182,7 @@
                                         </li>
 
                                         <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i
-                                                class="ri-calendar-2-line"></i><span>实时数据看板</span></a>
+                                                class="ri-alarm-fill"></i><span>实时数据看板</span></a>
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/use_ratio}">设备利用率</a></li>
                                                 <li><a th:href="@{/activation}">设备稼动率</a></li>
@@ -190,7 +190,7 @@
                                         </li>
 
                                         <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i
-                                                class="ri-store-2-line"></i><span>产量分析看板</span></a>
+                                                class="ri-bar-chart-2-fill"></i><span>产量分析看板</span></a>
 
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/output}">产量数据</a></li>
@@ -201,17 +201,17 @@
                                         </li>
 
                                         <li><a th:href="@{/status_distribute}" class="waves-effect"><i
-                                                class="ri-mail-send-line"></i><span>状态分布看板</span></a>
+                                                class="ri-pie-chart-fill"></i><span>状态分布看板</span></a>
                                         </li>
 
                                         <li><a th:href="@{/OEE}" class=" waves-effect"><i
-                                                class="ri-artboard-2-line"></i><span>整线OEE分析</span></a></li>
+                                                class=" ri-line-chart-fill"></i><span>整线OEE分析</span></a></li>
 
                                         <li><a th:href="@{/cutter}" class=" waves-effect"><i
-                                                class="ri-artboard-2-line"></i><span>刀具分析</span></a></li>
+                                                class=" ri-slice-line"></i><span>刀具分析</span></a></li>
 
                                         <li><a th:href="@{/productionplan}" class=" waves-effect"><i
-                                                class="ri-artboard-2-line"></i><span>生产计划</span></a></li>
+                                                class=" ri-file-text-line"></i><span>生产计划</span></a></li>
 
                                     </ul>
                                 </div><!-- Sidebar -->
