--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -18,115 +18,128 @@
     <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
     <script src="../static/js/echarts.js"></script>
+    <script src="../static/libs/jquery/jquery.min.js"></script>
+    <script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/js/graph/test.js"></script>
 </head>
 
-<body>
-<script src="../static/libs/jquery/jquery.min.js"></script>
-<script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<div id="main" style="width: 800px; height: 400px; margin: 50px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646124908884"></div>
-<script type="text/javascript">
-    var chartDom = document.getElementById('main');
-    var myChart = echarts.init(chartDom);
-    var option;
 
 
-    // 创建变量接收数据
-    var time = [];
-    var output = [];
+<body data-sidebar="light">
+<!-- Begin page -->
+<div id="layout-wrapper">
 
-    //AJAX接收数据主体
-    $.ajax({
-        type:"GET",
-        url:"/OP40",
-        dataType:"json",
-        async:false,
-        success:function (result) {
+    <!--topbar and leftbar start-->
+    <div th:include="~{common::TopAndLeft}"></div>
+    <!--topbar and leftbar end-->
 
-            for (var i = 0; i < result.length; i++){
-                time.push(result[i].time);
-                output.push(result[i].output);
-            }
+    <!-- ============================================================== -->
+    <!-- Start right Content here -->
+    <!-- ============================================================== -->
 
-        },
-        error :function(errorMsg) {
-            alert("获取后台数据失败！");
-        }
-    });
+    <div id="graph" style="width: 800px; height: 400px; margin: 100px auto auto; -webkit-tap-highlight-color: transparent; user-select: none; position: relative;" _echarts_instance_="ec_1646123127942"></div>
+<!--    <script type="text/javascript">-->
+<!--        var chartDom = document.getElementById('graph');-->
+<!--        var myChart = echarts.init(chartDom);-->
+<!--        var option;-->
 
-    option = {
-        title: {
-            text: 'OP40产出'
-        },
-        tooltip: {
-            trigger: 'axis'
-        },
-        legend: {
-            data: 'output'
-        },
-        grid: {
-            left: '3%',
-            right: '4%',
-            bottom: '3%',
-            containLabel: true
-        },
-        toolbox: {
-            feature: {
-                saveAsImage: {}
-            }
-        },
-        xAxis: {
-            type: 'category',
-            boundaryGap: false,
-            data: time
-        },
-        yAxis: {
-            type: 'value'
-        },
-        series: [
-            // {
-            //     name: 'Email',
-            //     type: 'line',
-            //     stack: 'Total',
-            //     data: [120, 132, 101, 134, 90, 230, 210],
-            //     smooth: true
-            // },
-            // {
-            //     name: 'Union Ads',
-            //     type: 'line',
-            //     stack: 'Total',
-            //     data: [220, 182, 191, 234, 290, 330, 310],
-            //     smooth: true
-            // },
-            // {
-            //     name: 'Video Ads',
-            //     type: 'line',
-            //     stack: 'Total',
-            //     data: [150, 232, 201, 154, 190, 330, 410],
-            //     smooth: true
-            // },
-            // {
-            //     name: 'Direct',
-            //     type: 'line',
-            //     stack: 'Total',
-            //     data: [320, 332, 301, 334, 390, 330, 320],
-            //     smooth: true
-            // },
-            {
-                name: 'Search Engine',
-                type: 'line',
-                stack: 'Total',
-                data: output,
-                smooth: true
-            }
-        ]
-    };
 
-    myChart.setOption(option);
-</script>
+<!--        // 创建变量接收数据-->
+<!--        var time = [];-->
+<!--        var output = [];-->
 
-<!-- JAVASCRIPT -->
+<!--        //AJAX接收数据主体-->
+<!--        $.ajax({-->
+<!--            type:"GET",-->
+<!--            url:"/OP40",-->
+<!--            dataType:"json",-->
+<!--            async:false,-->
+<!--            success:function (result) {-->
 
+<!--                for (var i = 0; i < result.length; i++){-->
+<!--                    time.push(result[i].time);-->
+<!--                    output.push(result[i].output);-->
+<!--                }-->
+
+<!--            },-->
+<!--            error :function(errorMsg) {-->
+<!--                alert("获取后台数据失败！");-->
+<!--            }-->
+<!--        });-->
+
+<!--        option = {-->
+<!--            title: {-->
+<!--                text: 'OP40产出'-->
+<!--            },-->
+<!--            tooltip: {-->
+<!--                trigger: 'axis'-->
+<!--            },-->
+<!--            legend: {-->
+<!--                data: 'output'-->
+<!--            },-->
+<!--            grid: {-->
+<!--                left: '3%',-->
+<!--                right: '4%',-->
+<!--                bottom: '3%',-->
+<!--                containLabel: true-->
+<!--            },-->
+<!--            toolbox: {-->
+<!--                feature: {-->
+<!--                    saveAsImage: {}-->
+<!--                }-->
+<!--            },-->
+<!--            xAxis: {-->
+<!--                type: 'category',-->
+<!--                boundaryGap: false,-->
+<!--                data: time-->
+<!--            },-->
+<!--            yAxis: {-->
+<!--                type: 'value'-->
+<!--            },-->
+<!--            series: [-->
+<!--                // {-->
+<!--                //     name: 'Email',-->
+<!--                //     type: 'line',-->
+<!--                //     stack: 'Total',-->
+<!--                //     data: [120, 132, 101, 134, 90, 230, 210],-->
+<!--                //     smooth: true-->
+<!--                // },-->
+<!--                // {-->
+<!--                //     name: 'Union Ads',-->
+<!--                //     type: 'line',-->
+<!--                //     stack: 'Total',-->
+<!--                //     data: [220, 182, 191, 234, 290, 330, 310],-->
+<!--                //     smooth: true-->
+<!--                // },-->
+<!--                // {-->
+<!--                //     name: 'Video Ads',-->
+<!--                //     type: 'line',-->
+<!--                //     stack: 'Total',-->
+<!--                //     data: [150, 232, 201, 154, 190, 330, 410],-->
+<!--                //     smooth: true-->
+<!--                // },-->
+<!--                // {-->
+<!--                //     name: 'Direct',-->
+<!--                //     type: 'line',-->
+<!--                //     stack: 'Total',-->
+<!--                //     data: [320, 332, 301, 334, 390, 330, 320],-->
+<!--                //     smooth: true-->
+<!--                // },-->
+<!--                {-->
+<!--                    name: 'Search Engine',-->
+<!--                    type: 'line',-->
+<!--                    stack: 'Total',-->
+<!--                    data: output,-->
+<!--                    smooth: true-->
+<!--                }-->
+<!--            ]-->
+<!--        };-->
+
+<!--        myChart.setOption(option);-->
+<!--    </script>-->
+
+    <!-- JAVASCRIPT -->
+</div>
 <script src="../static/libs/metismenu/metisMenu.min.js"></script>
 <script src="../static/libs/simplebar/simplebar.min.js"></script>
 <script src="../static/libs/node-waves/waves.min.js"></script><!-- apexcharts -->
